@@ -50,6 +50,7 @@ BuildRequires:	liblo-devel
 %{_libdir}/lv2/%{name}.lv2/%{name}.so
 %{_libdir}/lv2/%{name}.lv2/%{name}_ui.ttl
 %{_libdir}/lv2/%{name}.lv2/%{name}_ui.so
+%dir %{_datadir}/appdata
 #dir %{_datadir}/mime
 #dir %{_datadir}/mime/packages
 #dir %{_datadir}/applications
@@ -63,6 +64,7 @@ BuildRequires:	liblo-devel
 #dir %{_datadir}/man
 #dir %{_datadir}/man/man1
 %{_bindir}/%{name}_jack
+%{_datadir}/appdata/%{name}.appdata.xml
 %{_datadir}/mime/packages/%{name}.xml
 %{_datadir}/applications/%{name}.desktop
 %{_datadir}/icons/hicolor/32x32/apps/%{name}.png
